--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- framwork bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- lien au ficher css-->
     <link rel="stylesheet" href="assets/css/styles.css">
+    <!-- lien au script-->
     <script async src="assets/js/script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+     <!-- Titre est image favicon -->
+    <title>LaManu or Not </title>
+    <link rel="icon" href="assets/img/logo.png">
 </head>
 <body>
-    <header>
-        <h2 class="d-flex ml-5 mt-2">Logo</h2>
-        <h1 class="text-center">document</h1> 
-    </header>
+    <div class="d-flex justify-content-center block-middel">
+        <img class="img-fluid logo" src="assets/img/logo.png">
+    </div>
+    <div class="d-flex justify-content-center">
+    <a href="game.html" class="button mt-5">Jouer</a>
+    </div>
 </body>
 </html>
