--- a/index.html
+++ b/index.html
@@ -1,25 +1,67 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- framwork bootstrap-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!-- lien au ficher css-->
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <!-- lien au script-->
-    <script async src="assets/js/script.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <!-- Titre est image favicon -->
-    <title>LaManu or Not </title>
-    <link rel="icon" href="assets/img/logo.png">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <title></title>
 </head>
+
 <body>
-    <div class="d-flex justify-content-center block-middel">
-        <img class="img-fluid logo" src="assets/img/logo.png">
+  <div class="row justify-content-center m-0" id="main">
+    <div class="col-lg-8 text-center globalContent">
+      <div class="d-flex justify-content-center">
+        <img class="logo" src="assets/img/logo.png">
+      </div>
+      <p class="text-white buttonSize">
+        Prouvez-nous que vous êtes bien des notres !
+      </p>
+      <div class="d-flex justify-content-center">
+        <a class="button mt-5 mx-5 buttonSize" onclick="replay()">Jouer</a>
+      </div>
     </div>
-    <div class="d-flex justify-content-center">
-    <a href="game.html" class="button mt-5">Jouer</a>
+  </div>
+
+  <div class="modal fade" id="trueModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header m-auto">
+          <h5 class="modal-title" id="exampleModalLabel">Victoire</h5>
+        </div>
+        <div class="modal-body m-auto">
+          Bien joué camarade !!!
+        </div>
+        <div class="modal-footer m-auto">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="replay()">Rejouer</button>
+        </div>
+      </div>
     </div>
+  </div>
+
+  <div class="modal fade" id="falseModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header m-auto">
+          <h5 class="modal-title" id="exampleModalLabel">Looser !!!</h5>
+        </div>
+        <div class="modal-body m-auto">
+          Tu es sûr d'être déjà venu parmis nous ???
+        </div>
+        <div class="modal-footer m-auto">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="replay()">Rejouer</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+  <script src="assets/js/script.js"></script>
 </body>
+
 </html>
